--- a/views/admin/addcoupon.hbs
+++ b/views/admin/addcoupon.hbs
@@ -84,7 +84,7 @@
 
                                         </div>
                                         <div class="mt-2">
-                                            <button type="submit" class="btn btn-primary me-2">Add Coupen</button>
+                                            <button type="submit" class="btn btn-primary me-2">Add Coupon</button>
                                             <button type="reset" class="btn btn-outline-secondary">Cancel</button>
                                         </div>
 
