--- a/views/partials/userheader.hbs
+++ b/views/partials/userheader.hbs
@@ -13,8 +13,7 @@
 <!-- responsive style -->
 <link href="css/responsive.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-<header class="header_section">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css" rel="stylesheet"><header class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html"><img width="250" src="/images/logo.png" alt="#" /></a>
